--- a/front-end/html's/cadastro.html
+++ b/front-end/html's/cadastro.html
@@ -15,7 +15,7 @@
     <div>
         <P>Cadastro</P>
         <div>
-            <p>Nome Completo</p>
+            <p>Nome</p>
             <p>Email</p>
             <p>Nome de Usuário</p>
             <p>Senha</p>
