Cadastro com todos os campos

--- a/front-end/html's/cadastro.html
+++ b/front-end/html's/cadastro.html
@@ -15,15 +15,23 @@
     <div>
         <P>Cadastro</P>
         <div>
-            <p>Nome</p>
-            <p>Email</p>
-            <p>Nome de Usuário</p>
-            <p>Senha</p>
+            <input value="Nome Completo">
+            <input value="Logadouro">
+            <input value="Nome de Usuario">
+            <input value="Senha">
             <select>
+                <option>Selecione sua Escolaridade</option>
                 <option>Séries Iniciais</option>
-                <option></option>
+                <option>Séries Finais</option>
+                <option>Ensino Médio</option>
+                <option>Ensino Superior</option>
             </select>
-        </div>
+            <div>
+                <button type="button">CADASTRAR</button>
+                <p>Já tem login?</p>
+                <button type="button">LOGIN</button> 
+            </div>
+         </div>
     </div>
 </body>
 </html>
