--- a/front-end/html's/login.html
+++ b/front-end/html's/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="barrazul">
-        <img src="">
+        <img id="imagem-tres-barras" src="../imagens/menu.png">
         <p> Início</p>
+        <img id="imagem-maior-que" src="../imagens/maior-que.png">
     </div>
 </body>
 </html>
