finalização da barra azul do menu

--- a/front-end/html's/login.html
+++ b/front-end/html's/login.html
@@ -8,9 +8,19 @@
 </head>
 <body>
     <div class="barrazul">
-        <img id="imagem-tres-barras" src="../imagens/menu.png">
+        <img class="imagem-tres-barras" src="../imagens/menu.png">
         <p> Início</p>
-        <img id="imagem-maior-que" src="../imagens/maior-que.png">
+        <img class="imagem-maior-que" src="../imagens/maior-que.png">
+        <p>EPTRAN</p>
+        <img class="imagem-maior-que" src="../imagens/maior-que.png">
+        <p>Login</p>
+        <img class="user" src="../imagens/user.png">
+        <img class="engrenagem" src="../imagens/gear.png">
+    </div>
+    <div class="centralizar-div">
+        <div id="login">
+            
+        </div>
     </div>
 </body>
 </html>
