--- a/front-end/html's/login.html
+++ b/front-end/html's/login.html
@@ -18,8 +18,7 @@
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
     <div class="centralizar-div">
-        <div id="login">
-            
+        <div class="div-centralizada">
         </div>
     </div>
 </body>
