adicionado a barra azul para os campos login e registro. E inicio dos campos do login

--- a/front-end/html's/login.html
+++ b/front-end/html's/login.html
@@ -19,6 +19,12 @@
     </div>
     <div class="centralizar-div">
         <div class="div-centralizada">
+            <div class="barrazul-entrar">
+                <p id="login">Login</p>
+            </div>
+            <div>
+                <input class="campo-registro" value="usuario">
+            </div>
         </div>
     </div>
 </body>
