--- a/front-end/html's/inicio.html
+++ b/front-end/html's/inicio.html
@@ -27,6 +27,10 @@
             <p> O Eptran (Escola Pública de Trânsito) é o órgão responsável pela realização de campanhas, palestras, ações e projetos educacionais ligados à segurança e mobilidade no trânsito. </p>
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
+        <div class="vermelho">
+            <div> <p> Séries iniciais </p>
+            <p> (1º ao 5º ano) </p> </div>
+        </div>
     </body>
     
 </html>
