--- a/front-end/html's/cadastro.html
+++ b/front-end/html's/cadastro.html
@@ -19,18 +19,24 @@
     </div>
     <div class="centralizar-div">
         <div class="div-centralizada">
-            <div id="cadastro">
-                <P>Cadastro</P>
+            <div class="barrazul-entrar">
+                <p >Cadastro</p>
             </div>
             <div id="meinho">
                 <div>
-                    <img class="user" src="../imagens/user.png">
+                    <img class="usuario" src="../imagens/user.png">
                     <input value="Nome Completo">
                 </div>
                 <div>
+                    <img class="imagem-entrar" src="../imagens/localizador-de-mapa.png">
                     <input value="Cidade">
                 </div>
                 <div>
+                    <img class="imagem-entrar" src="../imagens/">
+                    <input value="Email">
+                </div>
+                <div>
+                    <img class="imagem-entrar" src="../imagens/graduate-cap.png">
                     <input value="Nome de Usuario">
                 </div>
                 <div>
