--- a/front-end/html's/login.html
+++ b/front-end/html's/login.html
@@ -20,10 +20,13 @@
     <div class="centralizar-div">
         <div class="div-centralizada">
             <div class="barrazul-entrar">
-                <p id="login">Login</p>
+                <p class="fonte-entrar">Login</p>
             </div>
             <div>
-                <input class="campo-registro" value="usuario">
+                <input class="campo-registro" value="Usuário">
+            </div>
+            <div>
+                <input class="campo-registro" value="Senha">
             </div>
         </div>
     </div>
