--- a/front-end/html's/cadastro.html
+++ b/front-end/html's/cadastro.html
@@ -32,7 +32,7 @@
                     <input value="Cidade">
                 </div>
                 <div>
-                    <img class="imagem-entrar" src="../imagens/">
+                    <img class="imagem-entrar" src="../imagens/e-mail.png">
                     <input value="Email">
                 </div>
                 <div>
