--- a/front-end/html's/login.html
+++ b/front-end/html's/login.html
@@ -22,11 +22,23 @@
             <div class="barrazul-entrar">
                 <p class="fonte-entrar">Login</p>
             </div>
-            <div>
+            <div class="espacamento-login">
+                <img class="usuario" src="../imagens/user.png">
                 <input class="campo-registro" value="Usuário">
             </div>
-            <div>
+            <div class="espacamento-login">
+                <img class="usuario" src="../imagens/cadeado.png">
                 <input class="campo-registro" value="Senha">
+                <div id="recuperar-senha">
+                    <p> Esqueceu a senha?</p>
+                </div>
+            </div>
+            <div>
+                <button type="button" class="entrar">Logar</button>
+            </div>
+            <div id="nao-login">
+                <p> Não tem conta?</p>
+                <p>Cadastre-se!</p>
             </div>
         </div>
     </div>
