--- a/front-end/html's/cadastro.html
+++ b/front-end/html's/cadastro.html
@@ -20,37 +20,40 @@
     <div class="centralizar-div">
         <div class="div-centralizada">
             <div class="barrazul-entrar">
-                <p >Cadastro</p>
+                <p class="fonte-entrar">Cadastro</p>
             </div>
             <div id="meinho">
-                <div>
+                <div class="espaco">
                     <img class="usuario" src="../imagens/user.png">
-                    <input value="Nome Completo">
+                    <input value="Nome Completo" class="campo-registro">
                 </div>
                 <div>
                     <img class="imagem-entrar" src="../imagens/localizador-de-mapa.png">
-                    <input value="Cidade">
+                    <input value="Cidade"class="campo-registro">
                 </div>
                 <div>
                     <img class="imagem-entrar" src="../imagens/e-mail.png">
-                    <input value="Email">
+                    <input value="Email" class="campo-registro">
                 </div>
                 <div>
-                    <img class="imagem-entrar" src="../imagens/graduate-cap.png">
-                    <input value="Nome de Usuario">
+                    <img class="usuario" src="../imagens/user.png">
+                    <input value="Nome de Usuario" class="campo-registro">
                 </div>
                 <div>
                     <img class="imagem-entrar" src="../imagens/cadeado.png">
-                    <input value="Senha">
+                    <input value="Senha" class="campo-registro">
                 </div>
-                <select>
-                    <option>Selecione sua Escolaridade</option>
-                    <option>Séries Iniciais</option>
-                    <option>Séries Finais</option>
-                    <option>Ensino Médio</option>
-                    <option>Ensino Superior</option>
-                </select>
-                <div>
+                <div class="espaco">
+                    <img class="imagem-entrar" src="../imagens/graduate-cap.png">
+                    <select>
+                        <option>Selecione sua Escolaridade</option>
+                        <option>Séries Iniciais</option>
+                        <option>Séries Finais</option>
+                        <option>Ensino Médio</option>
+                        <option>Ensino Superior</option>
+                    </select>
+                </div>
+                <div class="espaco">
                     <button type="button" class="entrar">CADASTRAR</button>
                     <p>Já tem login?</p>
                     <button type="button" class="entrar">LOGIN</button> 
@@ -58,5 +61,6 @@
              </div>
         </div>
     </div>
+    <img class="logo" src="../imagens/Prefeitura.png">
 </body>
 </html>
