colocar icone prefeitura

--- a/front-end/html's/cadastro.html
+++ b/front-end/html's/cadastro.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="espaco">
                     <img class="imagem-entrar" src="../imagens/graduate-cap.png">
-                    <select>
+                    <select id="redondo">
                         <option>Selecione sua Escolaridade</option>
                         <option>Séries Iniciais</option>
                         <option>Séries Finais</option>
@@ -54,7 +54,7 @@
                     </select>
                 </div>
                 <div class="espaco">
-                    <button type="button" class="entrar">CADASTRAR</button>
+                    <button type="button" class="cadastrar-se">CADASTRAR</button>
                     <p>Já tem login?</p>
                     <button type="button" class="entrar">LOGIN</button> 
                 </div>
