azul no não tem login

--- a/front-end/html's/cadastro.html
+++ b/front-end/html's/cadastro.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="espaco">
                     <button type="button" class="cadastrar-se">CADASTRAR</button>
-                    <p>Já tem login?</p>
+                    <p class="nao-login">Já tem login?</p>
                     <button type="button" class="entrar">LOGIN</button> 
                 </div>
              </div>
