--- a/front-end/html's/login.html
+++ b/front-end/html's/login.html
@@ -36,7 +36,7 @@
             <div>
                 <button type="button" class="entrar">Logar</button>
             </div>
-            <div id="nao-login">
+            <div class="nao-login">
                 <p> Não tem conta?</p>
                 <p>Cadastre-se!</p>
             </div>
