arrumado as paginas de cadastro e login junto com o CSS (nao foi mexido em mais nada) - Gustavo

--- a/front-end/html's/cadastro.html
+++ b/front-end/html's/cadastro.html
@@ -23,16 +23,16 @@
                 <p class="fonte-entrar">Cadastro</p>
             </div>
             <div id="meinho">
-                <div class="espaco">
+                <div class="espacamento-login">
                     <img class="usuario" src="../imagens/user.png">
                     <input value="Nome Completo" class="campo-registro">
                 </div>
                 <div>
-                    <img class="imagem-entrar" src="../imagens/localizador-de-mapa.png">
+                    <img class="usuario" src="../imagens/localizador-de-mapa.png">
                     <input value="Cidade"class="campo-registro">
                 </div>
                 <div>
-                    <img class="imagem-entrar" src="../imagens/e-mail.png">
+                    <img class="usuario" src="../imagens/e-mail.png">
                     <input value="Email" class="campo-registro">
                 </div>
                 <div>
@@ -40,12 +40,12 @@
                     <input value="Nome de Usuario" class="campo-registro">
                 </div>
                 <div>
-                    <img class="imagem-entrar" src="../imagens/cadeado.png">
+                    <img class="usuario" src="../imagens/cadeado.png">
                     <input value="Senha" class="campo-registro">
                 </div>
                 <div class="espaco">
-                    <img class="imagem-entrar" src="../imagens/graduate-cap.png">
-                    <select id="redondo">
+                    <img class="usuario" src="../imagens/graduate-cap.png">
+                    <select class="campo-registro">
                         <option>Selecione sua Escolaridade</option>
                         <option>Séries Iniciais</option>
                         <option>Séries Finais</option>
@@ -54,9 +54,8 @@
                     </select>
                 </div>
                 <div class="espaco">
-                    <button type="button" class="cadastrar-se">CADASTRAR</button>
-                    <p class="nao-login">Já tem login?</p>
-                    <button type="button" class="entrar">LOGIN</button> 
+                    <button type="button" id="cadastrar">CADASTRAR</button>
+                    <p class="textos-azuis">Já tem login?</p>
                 </div>
              </div>
         </div>
