--- a/front-end/html's/login.html
+++ b/front-end/html's/login.html
@@ -29,15 +29,15 @@
             <div class="espacamento-login">
                 <img class="usuario" src="../imagens/cadeado.png">
                 <input class="campo-registro" value="Senha">
-                <div id="recuperar-senha">
-                    <p> Esqueceu a senha?</p>
+                <div class="textos-azuis">
+                    <p>Esqueceu a senha?</p>
                 </div>
             </div>
             <div>
                 <button type="button" class="entrar">Logar</button>
             </div>
-            <div class="nao-login">
-                <p> Não tem conta?</p>
+            <div class="textos-azuis">
+                <p>Não tem conta?</p>
                 <p>Cadastre-se!</p>
             </div>
         </div>
