arrumando o que desarrumaram do inicio 😤👿

--- a/front-end/html's/inicio.html
+++ b/front-end/html's/inicio.html
@@ -28,17 +28,17 @@
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
         <div class="vermelho">
-            <div class="serie"> <p id="negs"> Séries iniciais </p>
+            <div class="series"> <p id="negs"> Séries iniciais </p>
             <p> (1º ao 5º ano) </p> </div>
             <div id="parando"> <img id="pare" src="../imagens/pare.png" ></div>
         </div>
         <div class="amarelo">
-            <div class="serie"> <p id="negs"> Séries iniciais </p>
+            <div class="series"> <p id="negs"> Séries iniciais </p>
             <p> (5º ao 9º ano) </p> </div>
             <div id="ciclando"> <img id="cicli" src="../imagens/cicli.png" ></div>
         </div>
         <div class="verde">
-            <div class="serie"> <p id="negs"> Ensino Médio </p>
+            <div class="series"> <p id="negs"> Ensino Médio </p>
             <p> (1º ao 3º ano) </p> </div>
             <div id="eptrando"> <img id="eptrans" src="../imagens/youareateptran.png" ></div>
         </div>
