arrumado o CSS e nomenclatura do html

--- a/front-end/estrutura/Animacao.html
+++ b/front-end/estrutura/Animacao.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../style/style.css" />
     <title>EPTRAN</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <p>EPTRAN</p>
         <img class="imagem-maior-que" src="../imagens/maior-que.png">
         <p>Login</p>
-        <img class="user" src="../imagens/user.png">
+        <img class="usuario-branco" src="../imagens/user.png">
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
     <div class="DivMae">
