--- a/front-end/estrutura/cadastro.html
+++ b/front-end/estrutura/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../style/style.css" />
     <title>Cadastro</title>
 </head>
 <body>
@@ -11,10 +11,8 @@
         <img class="imagem-tres-barras" src="../imagens/menu.png">
         <p> Início</p>
         <img class="imagem-maior-que" src="../imagens/maior-que.png">
-        <p>EPTRAN</p>
-        <img class="imagem-maior-que" src="../imagens/maior-que.png">
-        <p>Login</p>
-        <img class="user" src="../imagens/user.png">
+        <p>Cadastro</p>
+        <img class="usuario-branco-cadastro" src="../imagens/user.png">
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
     <div class="centralizar-div">
@@ -34,10 +32,6 @@
                 <div>
                     <img class="usuario" src="../imagens/e-mail.png">
                     <input value="Email" class="campo-registro">
-                </div>
-                <div>
-                    <img class="usuario" src="../imagens/user.png">
-                    <input value="Nome de Usuario" class="campo-registro">
                 </div>
                 <div>
                     <img class="usuario" src="../imagens/cadeado.png">
