--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="../style/style.css" />
         <title>Tela de Início EPTRAN</title>
     </head>
 
@@ -15,12 +15,12 @@
             <img class="imagem-maior-que" src="../imagens/maior-que.png">
             <p>EPTRAN</p>
             <img class="imagem-maior-que" src="../imagens/maior-que.png">
-            <p>Login</p>
-            <img class="user" src="../imagens/user.png">
+            <p>Início</p>
+            <img class="usuario-branco" src="../imagens/user.png">
             <img class="engrenagem" src="../imagens/gear.png">
         </div>
-        <header id="header"> <img id="fundoCinza" src= "../imagens/capa.jpg">
-            <div id="posi"> <h1 id="welcome"> BEM-VINDO AO EPTRAN! </h1></div>
+        <header> <img id="fundoCinza" src= "../imagens/capa.jpg">
+            <div id="posi"> <h1 class="bem-vindo"> BEM-VINDO AO EPTRAN! </h1></div>
         </header>
         </div>
         <div id="textin">
