--- a/front-end/estrutura/Jogo.html
+++ b/front-end/estrutura/Jogo.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
-    <link rel="stylesheet" href="../css/style.css"> 
+    <link rel="stylesheet" href="../style/style.css" />
     <title>Eptran</title>
 </head>
 <body>
@@ -12,15 +12,13 @@
         <img class="imagem-maior-que" src="../imagens/maior-que.png">
         <p>EPTRAN</p>
         <img class="imagem-maior-que" src="../imagens/maior-que.png">
-        <p>Login</p>
-        <img class="user" src="../imagens/user.png">
+        <p>Séries Finais</p>
+        <img class="usuario-branco" src="../imagens/user.png">
         <img class="engrenagem" src="../imagens/gear.png">
-    </div>
-    <div class="BarraTextJogo">
-        <a class="TextJogo">Jogo sobre o Trânsito</a>
     </div>
     <div class="DivMae">
         <div class="centralizar-div2">
+            <a class="TextoJogo">Jogo sobre o Trânsito</a>
             <img class="Jogo" src="../imagens/JogoTwo.png">
             <img class="TamanhoIdealControle" src="../imagens/controle.png">
             <img class="TamanhoIdealExpandir"src="../imagens/Expandir.png">
