--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -19,28 +19,29 @@
             <img class="usuario-branco" src="../imagens/user.png">
             <img class="engrenagem" src="../imagens/gear.png">
         </div>
-        <header> <img id="fundoCinza" src= "../imagens/capa.jpg">
-            <div id="posi"> <h1 class="bem-vindo"> BEM-VINDO AO EPTRAN! </h1></div>
+        <header> 
+            <img id="fundoCinza" src= "../imagens/capa.jpg">
+            <div id="posicaoCabecalho"> <p class="tituloCabecalho"> BEM-VINDO AO EPTRAN! </p></div>
         </header>
         </div>
-        <div id="textin">
+        <div id="textoIntroducao">
             <p> O Eptran (Escola Pública de Trânsito) é o órgão responsável pela realização de campanhas, palestras, ações e projetos educacionais ligados à segurança e mobilidade no trânsito. </p>
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
-        <div class="vermelho">
-            <div class="series"> <p id="negs"> Séries iniciais </p>
+        <div class="deixarFundoVermelho">
+            <div class="todoTextoDaDiv"> <p class="deixarEmNegrito"> Séries iniciais </p>
             <p> (1º ao 5º ano) </p> </div>
-            <div id="parando"> <img id="pare" src="../imagens/pare.png" ></div>
+            <div id="posicaoImagem1"> <img id="tamanhoImagem1" src="../imagens/pare.png" ></div>
         </div>
-        <div class="amarelo">
-            <div class="series"> <p id="negs"> Séries iniciais </p>
+        <div class="deixarFundoAmarelo">
+            <div class="todoTextoDaDiv"> <p class="deixarEmNegrito"> Séries finais </p>
             <p> (5º ao 9º ano) </p> </div>
-            <div id="ciclando"> <img id="cicli" src="../imagens/cicli.png" ></div>
+            <div id="posicaoImagem2"> <img id="tamanhoImagem2" src="../imagens/cicli.png" ></div>
         </div>
-        <div class="verde">
-            <div class="series"> <p id="negs"> Ensino Médio </p>
+        <div class="deixarFundoVerde">
+            <div class="todoTextoDaDiv"> <p class="deixarEmNegrito"> Ensino Médio </p>
             <p> (1º ao 3º ano) </p> </div>
-            <div id="eptrando"> <img id="eptrans" src="../imagens/youareateptran.png" ></div>
+            <div id="posicaoImagem3"> <img id="tamanhoImagem3" src="../imagens/youareateptran.png" ></div>
         </div>
     </body>
     
