Foi adicionado comentarios e melhorados os nomes das class e divs de todas as páginas menos do inicio

--- a/front-end/estrutura/Animacao.html
+++ b/front-end/estrutura/Animacao.html
@@ -6,7 +6,7 @@
     <title>EPTRAN</title>
 </head>
 <body>
-    <div class="barrazul">
+    <div class="barra-navegacao">
         <img class="imagem-tres-barras" src="../imagens/menu.png">
         <p> Início</p>
         <img class="imagem-maior-que" src="../imagens/maior-que.png">
@@ -17,7 +17,7 @@
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
     <div class="DivMae">
-        <div class="centralizar-div2">
+        <div class="centralizar-animacao">
             <img class="Jogo" src="../imagens/JogoOne.png">
             <p class="Animacao">Animação sobre o Trânsito!</p>
         </div>
