--- a/front-end/estrutura/Jogo.html
+++ b/front-end/estrutura/Jogo.html
@@ -6,7 +6,7 @@
     <title>Eptran</title>
 </head>
 <body>
-    <div class="barrazul">
+    <div class="barra-navegacao">
         <img class="imagem-tres-barras" src="../imagens/menu.png">
         <p> Início</p>
         <img class="imagem-maior-que" src="../imagens/maior-que.png">
@@ -17,7 +17,7 @@
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
     <div class="DivMae">
-        <div class="centralizar-div2">
+        <div class="centralizar-animacao">
             <a class="TextoJogo">Jogo sobre o Trânsito</a>
             <img class="Jogo" src="../imagens/JogoTwo.png">
             <img class="TamanhoIdealControle" src="../imagens/controle.png">
