--- a/front-end/estrutura/cadastro.html
+++ b/front-end/estrutura/cadastro.html
@@ -7,12 +7,12 @@
     <title>Cadastro</title>
 </head>
 <body>
-    <div class="barrazul">
+    <div class="barra-navegacao">
         <img class="imagem-tres-barras" src="../imagens/menu.png">
         <p> Início</p>
         <img class="imagem-maior-que" src="../imagens/maior-que.png">
         <p>Cadastro</p>
-        <img class="usuario-branco-cadastro" src="../imagens/user.png">
+        <img class="usuario-branco" src="../imagens/user.png">
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
     <div class="centralizar-div">
@@ -20,25 +20,25 @@
             <div class="barrazul-entrar">
                 <p class="fonte-entrar">Cadastro</p>
             </div>
-            <div id="meinho">
+            <div>
                 <div class="espacamento-login">
-                    <img class="usuario" src="../imagens/user.png">
+                    <img class="icones" src="../imagens/user.png">
                     <input value="Nome Completo" class="campo-registro">
                 </div>
                 <div>
-                    <img class="usuario" src="../imagens/localizador-de-mapa.png">
+                    <img class="icones" src="../imagens/localizador-de-mapa.png">
                     <input value="Cidade"class="campo-registro">
                 </div>
                 <div>
-                    <img class="usuario" src="../imagens/e-mail.png">
+                    <img class="icones" src="../imagens/e-mail.png">
                     <input value="Email" class="campo-registro">
                 </div>
                 <div>
-                    <img class="usuario" src="../imagens/cadeado.png">
+                    <img class="icones" src="../imagens/cadeado.png">
                     <input value="Senha" class="campo-registro">
                 </div>
-                <div class="espaco">
-                    <img class="usuario" src="../imagens/graduate-cap.png">
+                <div>
+                    <img class="icones" src="../imagens/graduate-cap.png">
                     <select class="campo-registro">
                         <option>Selecione sua Escolaridade</option>
                         <option>Séries Iniciais</option>
@@ -47,8 +47,8 @@
                         <option>Ensino Superior</option>
                     </select>
                 </div>
-                <div class="espaco">
-                    <button type="button" id="cadastrar">CADASTRAR</button>
+                <div>
+                    <button id="cadastrar">CADASTRAR</button>
                     <p class="textos-azuis">Já tem login?</p>
                 </div>
              </div>
