--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -9,7 +9,7 @@
     </head>
 
     <body id="body">
-        <div class="barrazul">
+        <div class="barra-navegacao">
             <img class="imagem-tres-barras" src="../imagens/menu.png">
             <p> Início</p>
             <img class="imagem-maior-que" src="../imagens/maior-que.png">
