--- a/front-end/estrutura/login.html
+++ b/front-end/estrutura/login.html
@@ -7,12 +7,12 @@
     <title>Entrar no EPTRAN</title>
 </head>
 <body>
-    <div class="barrazul">
+    <div class="barra-navegacao">
         <img class="imagem-tres-barras" src="../imagens/menu.png">
         <p> Início</p>
         <img class="imagem-maior-que" src="../imagens/maior-que.png">
         <p>Login</p>
-        <img class="usuario-branco-cadastro" src="../imagens/user.png">
+        <img class="usuario-branco-login" src="../imagens/user.png">
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
     <div class="centralizar-div">
@@ -21,11 +21,11 @@
                 <p class="fonte-entrar">Login</p>
             </div>
             <div class="espacamento-login">
-                <img class="usuario" src="../imagens/user.png">
+                <img class="icones" src="../imagens/user.png">
                 <input class="campo-registro" value="Usuário">
             </div>
             <div class="espacamento-login">
-                <img class="usuario" src="../imagens/cadeado.png">
+                <img class="icones" src="../imagens/cadeado.png">
                 <input class="campo-registro" value="Senha">
                 <div class="textos-azuis">
                     <p>Esqueceu a senha?</p>
