--- a/front-end/estrutura/menu.html
+++ b/front-end/estrutura/menu.html
@@ -21,7 +21,7 @@
             <img class="engrenagem" src="../imagens/gear.png">
         </div>
         <header> <img id="fundoCinza" src= "../imagens/capa.jpg">
-            <div id="posi"> <h1 class="bem-vindo"> BEM-VINDO AO EPTRAN! </h1></div>
+            <div id="posicao-bemvindo"> <p class="bem-vindo"> BEM-VINDO AO EPTRAN! </hp></div>
         </header>
         </div>
         <div id="textin">
