adicionado alguns comentários e modificação de nomeclatura de classes

--- a/front-end/estrutura/Animacao.html
+++ b/front-end/estrutura/Animacao.html
@@ -18,7 +18,7 @@
     </div>
     <div class="DivMae">
         <div class="centralizar-animacao">
-            <img class="Jogo" src="../imagens/JogoOne.png">
+            <img class="Jogo" src="../imagens/JogoOne.png"> <!-- Imagem representativa do jogo -->
             <p class="Animacao">Animação sobre o Trânsito!</p>
         </div>
     </div>
