--- a/front-end/estrutura/Jogo.html
+++ b/front-end/estrutura/Jogo.html
@@ -20,7 +20,7 @@
         <div class="centralizar-animacao">
             <a class="TextoJogo">Jogo sobre o Trânsito</a>
             <img class="Jogo" src="../imagens/JogoTwo.png">
-            <img class="TamanhoIdealControle" src="../imagens/controle.png">
+            <img class="TamanhoIdealControle" src="../imagens/controle.png"> <!-- Ícones de som, gamepad e aumentar tela do jogo -->
             <img class="TamanhoIdealExpandir"src="../imagens/Expandir.png">
             <img class="TamanhoIdealVolume" src="../imagens/Volume.png">
         </div>
