--- a/front-end/estrutura/cadastro.html
+++ b/front-end/estrutura/cadastro.html
@@ -17,7 +17,7 @@
     </div>
     <div class="centralizar-div">
         <div class="div-centralizada">
-            <div class="barrazul-entrar">
+            <div class="barrazul-entrar"> <!-- Barra azul do fundo do "Cadastro" -->
                 <p class="fonte-entrar">Cadastro</p>
             </div>
             <div>
@@ -49,11 +49,11 @@
                 </div>
                 <div>
                     <button id="cadastrar">CADASTRAR</button>
-                    <p class="textos-azuis">Já tem login?</p>
+                    <p class="textos-azuis">Já tem login?</p> <!-- Textos links para fazer login -->
                 </div>
              </div>
         </div>
     </div>
-    <img class="logo" src="../imagens/Prefeitura.png">
+    <img class="logo-prefeitura" src="../imagens/Prefeitura.png">
 </body>
 </html>
