--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -20,11 +20,13 @@
             <img class="engrenagem" src="../imagens/gear.png">
         </div>
         <header> 
-            <img id="fundoCinza" src= "../imagens/capa.jpg">
-            <div id="posicaoCabecalho"> <p class="tituloCabecalho"> BEM-VINDO AO EPTRAN! </p></div>
+            <img class="fundoCinza" src= "../imagens/capa.jpg">
+            <div class="posicaoCabecalho"> 
+                <p class="tituloCabecalho"> BEM-VINDO AO EPTRAN! </p>
+            </div>
         </header>
         </div>
-        <div id="textoIntroducao">
+        <div class="textoIntroducao">
             <p> O Eptran (Escola Pública de Trânsito) é o órgão responsável pela realização de campanhas, palestras, ações e projetos educacionais ligados à segurança e mobilidade no trânsito. </p>
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
