--- a/front-end/estrutura/login.html
+++ b/front-end/estrutura/login.html
@@ -36,10 +36,10 @@
             </div>
             <div class="textos-azuis">
                 <p>Não tem conta?</p>
-                <p>Cadastre-se!</p>
+                <p>Cadastre-se!</p> <!-- Textos links para fazer cadastro -->
             </div>
         </div>
     </div>
-    <img class="logo" src="../imagens/Prefeitura.png">
+    <img class="logo-prefeitura" src="../imagens/Prefeitura.png">
 </body>
 </html>
