--- a/front-end/estrutura/menu.html
+++ b/front-end/estrutura/menu.html
@@ -20,28 +20,36 @@
             <img class="usuario-branco" src="../imagens/user.png">
             <img class="engrenagem" src="../imagens/gear.png">
         </div>
-        <header> <img id="fundoCinza" src= "../imagens/capa.jpg">
-            <div id="posicao-bemvindo"> <p class="bem-vindo"> BEM-VINDO AO EPTRAN! </hp></div>
+        <header> 
+            <img class="fundoCinza" src= "../imagens/capa.jpg">
+            <div class="posicaoCabecalho"> 
+                <p class="tituloCabecalho"> BEM-VINDO AO EPTRAN! </p>
+            </div>
         </header>
         </div>
-        <div id="textin">
+        <div class="textoIntroducao">
             <p> O Eptran (Escola Pública de Trânsito) é o órgão responsável pela realização de campanhas, palestras, ações e projetos educacionais ligados à segurança e mobilidade no trânsito. </p>
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
-        <div class="vermelho">
-            <div class="series"> <p id="negs"> Séries iniciais </p>
-            <p> (1º ao 5º ano) </p> </div>
+        <div class="deixarFundoVermelho">
+            <div class="todoTextoDaDiv"> 
+                <p id="deixarEmNegrito"> Séries iniciais </p>
+                <p> (1º ao 5º ano) </p> 
+            </div>
         </div>
-        <div class="amarelo">
-            <div class="series"> <p id="negs"> Séries iniciais </p>
-            <p> (5º ao 9º ano) </p> </div>
-
+        <div class="deixarFundoAmarelo">
+            <div class="todoTextoDaDiv"> 
+                <p id="deixarEmNegrito"> Séries iniciais </p>
+                <p> (5º ao 9º ano) </p> 
+            </div>
         </div>
-        <div class="verde">
-            <div class="series"> <p id="negs"> Ensino Médio </p>
-            <p> (1º ao 3º ano) </p> </div>
+        <div class="deixarFundoVerde">
+            <div class="todoTextoDaDiv"> 
+                <p id="deixarEmNegrito"> Ensino Médio </p>
+                <p> (1º ao 3º ano) </p> 
+            </div>
         </div>
-    </section>
+        </section>
         <div id="absoluta">
             <img class="imagem-tres-barras-menu" src="../imagens/menu.png">
             <div class="menu-suspenso">
