mudado a paleta de cores e as tags id e class no menu e inicio

--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -30,19 +30,19 @@
             <p> O Eptran (Escola Pública de Trânsito) é o órgão responsável pela realização de campanhas, palestras, ações e projetos educacionais ligados à segurança e mobilidade no trânsito. </p>
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
-        <div class="deixarFundoVermelho">
+        <div class="FundoVermelho">
             <div class="todoTextoDaDiv"> <p class="deixarEmNegrito"> Séries iniciais </p>
-            <p> (1º ao 5º ano) </p> </div>
+            <p class="deixarEmNegrito"> (1º ao 5º ano) </p> </div>
             <div id="posicaoImagem1"> <img id="tamanhoImagem1" src="../imagens/pare.png" ></div>
         </div>
-        <div class="deixarFundoAmarelo">
-            <div class="todoTextoDaDiv"> <p class="deixarEmNegrito"> Séries finais </p>
+        <div class="FundoAmarelo">
+            <div class="todoTextoDaDiv"> <p> Séries finais </p>
             <p> (5º ao 9º ano) </p> </div>
             <div id="posicaoImagem2"> <img id="tamanhoImagem2" src="../imagens/cicli.png" ></div>
         </div>
-        <div class="deixarFundoVerde">
+        <div class="FundoVerde">
             <div class="todoTextoDaDiv"> <p class="deixarEmNegrito"> Ensino Médio </p>
-            <p> (1º ao 3º ano) </p> </div>
+            <p class="deixarEmNegrito"> (1º ao 3º ano) </p> </div>
             <div id="posicaoImagem3"> <img id="tamanhoImagem3" src="../imagens/youareateptran.png" ></div>
         </div>
     </body>
