--- a/front-end/estrutura/menu.html
+++ b/front-end/estrutura/menu.html
@@ -31,26 +31,26 @@
             <p> O Eptran (Escola Pública de Trânsito) é o órgão responsável pela realização de campanhas, palestras, ações e projetos educacionais ligados à segurança e mobilidade no trânsito. </p>
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
-        <div class="deixarFundoVermelho">
+        <div class="FundoVermelho">
             <div class="todoTextoDaDiv"> 
-                <p id="deixarEmNegrito"> Séries iniciais </p>
+                <p class="deixarEmNegrito"> Séries iniciais </p>
                 <p> (1º ao 5º ano) </p> 
             </div>
         </div>
-        <div class="deixarFundoAmarelo">
+        <div class="FundoAmarelo">
             <div class="todoTextoDaDiv"> 
-                <p id="deixarEmNegrito"> Séries iniciais </p>
+                <p> Séries iniciais </p>
                 <p> (5º ao 9º ano) </p> 
             </div>
         </div>
-        <div class="deixarFundoVerde">
+        <div class="FundoVerde">
             <div class="todoTextoDaDiv"> 
-                <p id="deixarEmNegrito"> Ensino Médio </p>
+                <p class="deixarEmNegrito"> Ensino Médio </p>
                 <p> (1º ao 3º ano) </p> 
             </div>
         </div>
         </section>
-        <div id="absoluta">
+        <div id="aba-menu">
             <img class="imagem-tres-barras-menu" src="../imagens/menu.png">
             <div class="menu-suspenso">
                 <p class="texto-menu-select"> EPTRAN</p>
