adicionamos tags snake case, colocamos botao interativo no login e cadastro, feito o rodape do site login e adicionadas novas imagens na pasta de imagens.

--- a/front-end/estrutura/cadastro.html
+++ b/front-end/estrutura/cadastro.html
@@ -48,7 +48,7 @@
                     </select>
                 </div>
                 <div>
-                    <button id="cadastrar">CADASTRAR</button>
+                    <button class="botao_entrar">CADASTRAR</button>
                     <p class="textos-azuis">Já tem login?</p> <!-- Textos links para fazer login -->
                 </div>
              </div>
