--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -31,19 +31,28 @@
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
         <div class="FundoVermelho">
-            <div class="todoTextoDaDiv"> <p class="deixarEmNegrito"> Séries iniciais </p>
-            <p class="deixarEmNegrito"> (1º ao 5º ano) </p> </div>
+            <div class="todoTextoDaDiv"> 
+                <p class="deixarEmNegrito"> Séries iniciais </p>
+                <p class="deixarEmNegrito"> (1º ao 5º ano) </p> </div>
             <div id="posicaoImagem1"> <img id="tamanhoImagem1" src="../imagens/pare.png" ></div>
         </div>
         <div class="FundoAmarelo">
-            <div class="todoTextoDaDiv"> <p> Séries finais </p>
-            <p> (5º ao 9º ano) </p> </div>
-            <div id="posicaoImagem2"> <img id="tamanhoImagem2" src="../imagens/cicli.png" ></div>
+            <div class="todoTextoDaDiv"> 
+                <p> Séries finais </p>
+                <p> (5º ao 9º ano) </p> 
+            </div>
+            <div id="posicaoImagem2"> 
+                <img id="tamanhoImagem2" src="../imagens/cicli.png" >
+            </div>
         </div>
         <div class="FundoVerde">
-            <div class="todoTextoDaDiv"> <p class="deixarEmNegrito"> Ensino Médio </p>
-            <p class="deixarEmNegrito"> (1º ao 3º ano) </p> </div>
-            <div id="posicaoImagem3"> <img id="tamanhoImagem3" src="../imagens/youareateptran.png" ></div>
+            <div class="todoTextoDaDiv"> 
+                <p class="deixarEmNegrito"> Ensino Médio </p>
+                <p class="deixarEmNegrito"> (1º ao 3º ano) </p> 
+            </div>
+            <div id="posicaoImagem3"> 
+                <img id="tamanhoImagem3" src="../imagens/youareateptran.png" >
+            </div>
         </div>
     </body>
     
