--- a/front-end/estrutura/login.html
+++ b/front-end/estrutura/login.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div>
-                <button type="button" class="entrar">Logar</button>
+                <button class="botao_entrar">Logar</button>
             </div>
             <div class="textos-azuis">
                 <p>Não tem conta?</p>
@@ -40,6 +40,15 @@
             </div>
         </div>
     </div>
-    <img class="logo-prefeitura" src="../imagens/Prefeitura.png">
+    <footer class="rodape">
+        <div>
+            <img class="cidade_rodape" src="../imagens/cidade_rodape_Iphone14.png">
+        </div>
+        <div class="display_footer">
+            <img class="logo_prefeitura" src="../imagens/Prefeitura.png">
+            <img class="logo_projeto" src="../imagens/logo_eptran.png">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
