trocadas algumas classes para snake case

--- a/front-end/estrutura/cadastro.html
+++ b/front-end/estrutura/cadastro.html
@@ -7,21 +7,23 @@
     <title>Cadastro</title>
 </head>
 <body>
-    <div class="barra-navegacao">
-        <img class="imagem-tres-barras" src="../imagens/menu.png">
+    <div class="barra_navegacao">
+        <img class="imagem_tres_barras" src="../imagens/menu.png">
         <p> Início</p>
-        <img class="imagem-maior-que" src="../imagens/maior-que.png">
-        <p>Cadastro</p>
-        <img class="usuario-branco" src="../imagens/user.png">
+        <img class="imagem_maior_que" src="../imagens/maior-que.png">
+        <p>EPTRAN</p>
+        <img class="imagem_maior_que" src="../imagens/maior-que.png">
+        <p>Login</p>
+        <img class="usuario_branco" src="../imagens/user.png">
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
-    <div class="centralizar-div">
-        <div class="div-centralizada">
-            <div class="barrazul-entrar"> <!-- Barra azul do fundo do "Cadastro" -->
-                <p class="fonte-entrar">Cadastro</p>
+    <div class="centralizar_div">
+        <div class="div_centralizada">
+            <div class="barrazul_entrar"> <!-- Barra azul do fundo do "Cadastro" -->
+                <p class="fonte_entrar">Cadastro</p>
             </div>
             <div>
-                <div class="espacamento-login">
+                <div class="espacamento_login">
                     <img class="icones" src="../imagens/user.png">
                     <input value="Nome Completo" class="campo-registro">
                 </div>
@@ -39,7 +41,7 @@
                 </div>
                 <div>
                     <img class="icones" src="../imagens/graduate-cap.png">
-                    <select class="campo-registro">
+                    <select class="campo_registro">
                         <option>Selecione sua Escolaridade</option>
                         <option>Séries Iniciais</option>
                         <option>Séries Finais</option>
@@ -49,11 +51,20 @@
                 </div>
                 <div>
                     <button class="botao_entrar">CADASTRAR</button>
-                    <p class="textos-azuis">Já tem login?</p> <!-- Textos links para fazer login -->
+                    <p class="textos_azuis">Já tem login?</p> <!-- Textos links para fazer login -->
                 </div>
              </div>
         </div>
     </div>
-    <img class="logo-prefeitura" src="../imagens/Prefeitura.png">
+    <footer class="rodape">
+        <div>
+            <img class="cidade_rodape" src="../imagens/cidade_rodape_Iphone14.png">
+        </div>
+        <div class="display_footer">
+            <img class="logo_prefeitura" src="../imagens/Prefeitura.png">
+            <img class="logo_projeto" src="../imagens/logo_eptran.png">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
