--- a/front-end/estrutura/Animacao.html
+++ b/front-end/estrutura/Animacao.html
@@ -6,21 +6,31 @@
     <title>EPTRAN</title>
 </head>
 <body>
-    <div class="barra-navegacao">
-        <img class="imagem-tres-barras" src="../imagens/menu.png">
+    <div class="barra_navegacao">
+        <img class="imagem_tres_barras" src="../imagens/menu.png">
         <p> Início</p>
-        <img class="imagem-maior-que" src="../imagens/maior-que.png">
+        <img class="imagem_maior_que" src="../imagens/maior-que.png">
         <p>EPTRAN</p>
-        <img class="imagem-maior-que" src="../imagens/maior-que.png">
+        <img class="imagem_maior_que" src="../imagens/maior-que.png">
         <p>Login</p>
-        <img class="usuario-branco" src="../imagens/user.png">
+        <img class="usuario_branco" src="../imagens/user.png">
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
-    <div class="DivMae">
-        <div class="centralizar-animacao">
-            <img class="Jogo" src="../imagens/JogoOne.png"> <!-- Imagem representativa do jogo -->
-            <p class="Animacao">Animação sobre o Trânsito!</p>
+    <div class="div_mae">
+        <div class="centralizar_animacao">
+            <img class="jogo" src="../imagens/JogoOne.png"> <!-- Imagem representativa do jogo -->
+            <p class="animacao">Animação sobre o Trânsito!</p>
         </div>
     </div>
+    <footer class="rodape">
+        <div>
+            <img class="cidade_rodape" src="../imagens/cidade_rodape_Iphone14.png">
+        </div>
+        <div class="display_footer">
+            <img class="logo_prefeitura" src="../imagens/Prefeitura.png">
+            <img class="logo_projeto" src="../imagens/logo_eptran.png">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
