--- a/front-end/estrutura/Jogo.html
+++ b/front-end/estrutura/Jogo.html
@@ -6,23 +6,23 @@
     <title>Eptran</title>
 </head>
 <body>
-    <div class="barra-navegacao">
-        <img class="imagem-tres-barras" src="../imagens/menu.png">
+    <div class="barra_navegacao">
+        <img class="imagem_tres_barras" src="../imagens/menu.png">
         <p> Início</p>
-        <img class="imagem-maior-que" src="../imagens/maior-que.png">
+        <img class="imagem_maior_que" src="../imagens/maior-que.png">
         <p>EPTRAN</p>
-        <img class="imagem-maior-que" src="../imagens/maior-que.png">
-        <p>Séries Finais</p>
-        <img class="usuario-branco" src="../imagens/user.png">
+        <img class="imagem_maior_que" src="../imagens/maior-que.png">
+        <p>Início</p>
+        <img class="usuario_branco" src="../imagens/user.png">
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
-    <div class="DivMae">
-        <div class="centralizar-animacao">
-            <a class="TextoJogo">Jogo sobre o Trânsito</a>
-            <img class="Jogo" src="../imagens/JogoTwo.png">
-            <img class="TamanhoIdealControle" src="../imagens/controle.png"> <!-- Ícones de som, gamepad e aumentar tela do jogo -->
-            <img class="TamanhoIdealExpandir"src="../imagens/Expandir.png">
-            <img class="TamanhoIdealVolume" src="../imagens/Volume.png">
+    <div class="div_mae">
+        <div class="centralizar_animacao">
+            <a class="texto_jogo">Jogo sobre o Trânsito</a>
+            <img class="jogo" src="../imagens/JogoTwo.png">
+            <img class="tamanho_ideal_controle" src="../imagens/controle.png"> <!-- Ícones de som, gamepad e aumentar tela do jogo -->
+            <img class="tamanho_ideal_expandir"src="../imagens/Expandir.png">
+            <img class="tamanho_ideal_volume" src="../imagens/Volume.png">
         </div>
 </body>
 </html>
