--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -9,51 +9,61 @@
     </head>
 
     <body id="body">
-        <div class="barra-navegacao">
-            <img class="imagem-tres-barras" src="../imagens/menu.png">
+        <div class="barra_navegacao">
+            <img class="imagem_tres_barras" src="../imagens/menu.png">
             <p> Início</p>
-            <img class="imagem-maior-que" src="../imagens/maior-que.png">
+            <img class="imagem_maior_que" src="../imagens/maior-que.png">
             <p>EPTRAN</p>
-            <img class="imagem-maior-que" src="../imagens/maior-que.png">
+            <img class="imagem_maior_que" src="../imagens/maior-que.png">
             <p>Início</p>
-            <img class="usuario-branco" src="../imagens/user.png">
+            <img class="usuario_branco" src="../imagens/user.png">
             <img class="engrenagem" src="../imagens/gear.png">
         </div>
         <header> 
-            <img class="fundoCinza" src= "../imagens/capa.jpg">
-            <div class="posicaoCabecalho"> 
-                <p class="tituloCabecalho"> BEM-VINDO AO EPTRAN! </p>
+            <img class="fundo_cinza" src= "../imagens/capa.jpg">
+            <div class="posicao_cabecalho"> 
+                <p class="titulo_cabecalho"> BEM-VINDO AO EPTRAN! </p>
             </div>
         </header>
         </div>
-        <div class="textoIntroducao">
+        <div class="texto_introducao">
             <p> O Eptran (Escola Pública de Trânsito) é o órgão responsável pela realização de campanhas, palestras, ações e projetos educacionais ligados à segurança e mobilidade no trânsito. </p>
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
-        <div class="FundoVermelho">
-            <div class="todoTextoDaDiv"> 
-                <p class="deixarEmNegrito"> Séries iniciais </p>
-                <p class="deixarEmNegrito"> (1º ao 5º ano) </p> </div>
-            <div id="posicaoImagem1"> <img id="tamanhoImagem1" src="../imagens/pare.png" ></div>
+        <div class="fundo_vermelho">
+            <div class="todo_texto_daDiv"> 
+                <p class="deixar_negrito"> Séries iniciais </p>
+                <p class="deixar_negrito"> (1º ao 5º ano) </p> </div>
+            <div id="posicao_imagem1"> <img id="tamanho_imagem1" src="../imagens/pare.png" ></div>
         </div>
-        <div class="FundoAmarelo">
-            <div class="todoTextoDaDiv"> 
+        <div class="fundo_amarelo">
+            <div class="todo_texto_daDiv"> 
                 <p> Séries finais </p>
                 <p> (5º ao 9º ano) </p> 
             </div>
-            <div id="posicaoImagem2"> 
-                <img id="tamanhoImagem2" src="../imagens/cicli.png" >
+            <div id="posicao_imagem2"> 
+                <img id="tamanho_imagem2" src="../imagens/cicli.png" >
             </div>
         </div>
-        <div class="FundoVerde">
-            <div class="todoTextoDaDiv"> 
-                <p class="deixarEmNegrito"> Ensino Médio </p>
-                <p class="deixarEmNegrito"> (1º ao 3º ano) </p> 
+        <div class="fundo_verde">
+            <div class="todo_texto_daDiv"> 
+                <p class="deixar_negrito"> Ensino Médio </p>
+                <p class="deixar_negrito"> (1º ao 3º ano) </p> 
             </div>
-            <div id="posicaoImagem3"> 
-                <img id="tamanhoImagem3" src="../imagens/youareateptran.png" >
+            <div id="posicao_imagem3"> 
+                <img id="tamanho_imagem3" src="../imagens/youareateptran.png" >
             </div>
         </div>
+        <footer class="rodape">
+            <div>
+                <img class="cidade_rodape" src="../imagens/cidade_rodape_Iphone14.png">
+            </div>
+            <div class="display_footer">
+                <img class="logo_prefeitura" src="../imagens/Prefeitura.png">
+                <img class="logo_projeto" src="../imagens/logo_eptran.png">
+                </div>
+            </div>
+        </footer>
     </body>
     
 </html>
