--- a/front-end/estrutura/login.html
+++ b/front-end/estrutura/login.html
@@ -7,34 +7,36 @@
     <title>Entrar no EPTRAN</title>
 </head>
 <body>
-    <div class="barra-navegacao">
-        <img class="imagem-tres-barras" src="../imagens/menu.png">
+    <div class="barra_navegacao">
+        <img class="imagem_tres_barras" src="../imagens/menu.png">
         <p> Início</p>
-        <img class="imagem-maior-que" src="../imagens/maior-que.png">
-        <p>Login</p>
-        <img class="usuario-branco-login" src="../imagens/user.png">
+        <img class="imagem_maior_que" src="../imagens/maior-que.png">
+        <p>EPTRAN</p>
+        <img class="imagem_maior_que" src="../imagens/maior-que.png">
+        <p>Início</p>
+        <img class="usuario_branco" src="../imagens/user.png">
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
-    <div class="centralizar-div">
-        <div class="div-centralizada">
-            <div class="barrazul-entrar">
-                <p class="fonte-entrar">Login</p>
+    <div class="centralizar_div">
+        <div class="div_centralizada">
+            <div class="barrazul_entrar">
+                <p class="fonte_entrar">Login</p>
             </div>
-            <div class="espacamento-login">
+            <div class="espacamento_login">
                 <img class="icones" src="../imagens/user.png">
-                <input class="campo-registro" value="Usuário">
+                <input class="campo_registro" value="Usuário">
             </div>
-            <div class="espacamento-login">
+            <div class="espacamento_login">
                 <img class="icones" src="../imagens/cadeado.png">
-                <input class="campo-registro" value="Senha">
-                <div class="textos-azuis">
+                <input class="campo_registro" value="Senha">
+                <div class="textos_azuis">
                     <p>Esqueceu a senha?</p>
                 </div>
             </div>
             <div>
                 <button class="botao_entrar">Logar</button>
             </div>
-            <div class="textos-azuis">
+            <div class="textos_azuis">
                 <p>Não tem conta?</p>
                 <p>Cadastre-se!</p> <!-- Textos links para fazer cadastro -->
             </div>
