--- a/front-end/estrutura/menu.html
+++ b/front-end/estrutura/menu.html
@@ -9,64 +9,64 @@
     </head>
 
     <body>
-        <section id="Transparente">
-        <div id="barrazul-menu">
-            <img class="imagem-tres-barras" src="../imagens/menu.png">
+        <section id="transparente">
+        <div id="barrazul_menu">
+            <img class="imagem_tres_barras" src="../imagens/menu.png">
             <p> Início</p>
-            <img class="imagem-maior-que" src="../imagens/maior-que.png">
+            <img class="imagem_maior_que" src="../imagens/maior-que.png">
             <p>EPTRAN</p>
-            <img class="imagem-maior-que" src="../imagens/maior-que.png">
+            <img class="imagem_maior_que" src="../imagens/maior-que.png">
             <p>Início</p>
-            <img class="usuario-branco" src="../imagens/user.png">
+            <img class="usuario_branco" src="../imagens/user.png">
             <img class="engrenagem" src="../imagens/gear.png">
         </div>
         <header> 
-            <img class="fundoCinza" src= "../imagens/capa.jpg">
-            <div class="posicaoCabecalho"> 
+            <img class="fundo_cinza" src= "../imagens/capa.jpg">
+            <div class="posicao_cabecalho"> 
                 <p class="tituloCabecalho"> BEM-VINDO AO EPTRAN! </p>
             </div>
         </header>
         </div>
-        <div class="textoIntroducao">
+        <div class="texto_introducao">
             <p> O Eptran (Escola Pública de Trânsito) é o órgão responsável pela realização de campanhas, palestras, ações e projetos educacionais ligados à segurança e mobilidade no trânsito. </p>
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
-        <div class="FundoVermelho">
-            <div class="todoTextoDaDiv"> 
-                <p class="deixarEmNegrito"> Séries iniciais </p>
+        <div class="fundo_vermelho">
+            <div class="todo_texto_daDiv"> 
+                <p class="deixar_negrito"> Séries iniciais </p>
                 <p> (1º ao 5º ano) </p> 
             </div>
         </div>
-        <div class="FundoAmarelo">
-            <div class="todoTextoDaDiv"> 
+        <div class="fundo_amarelo">
+            <div class="todo_texto_daDiv"> 
                 <p> Séries iniciais </p>
                 <p> (5º ao 9º ano) </p> 
             </div>
         </div>
-        <div class="FundoVerde">
-            <div class="todoTextoDaDiv"> 
-                <p class="deixarEmNegrito"> Ensino Médio </p>
+        <div class="fundo_verde">
+            <div class="todo_texto_daDiv"> 
+                <p class="deixar_negrito"> Ensino Médio </p>
                 <p> (1º ao 3º ano) </p> 
             </div>
         </div>
         </section>
-        <div id="aba-menu">
-            <img class="imagem-tres-barras-menu" src="../imagens/menu.png">
-            <div class="menu-suspenso">
-                <p class="texto-menu-select"> EPTRAN</p>
-                <p class="texto-menu"> SÉRIES INICIAIS</p>
-                <p class="texto-menu"> SÉRIES FINAIS</p>
-                <p class="texto-menu"> ENSINO MÉDIO</p>
+        <div id="aba_menu">
+            <img class="imagem_tres_barras-menu" src="../imagens/menu.png">
+            <div class="menu_suspenso">
+                <p class="texto_menu_select"> EPTRAN</p>
+                <p class="texto_menu"> SÉRIES INICIAIS</p>
+                <p class="texto_menu"> SÉRIES FINAIS</p>
+                <p class="texto_menu"> ENSINO MÉDIO</p>
             </div>
-            <hr id="barra-menu">
+            <hr id="barra_menu">
             <div>
                 <div class="flexivel">
-                    <img class="engrenagem-menu" src="../imagens/gear.png">
-                    <p class="texto-menu"> CONFIGURAÇÕES</p>
+                    <img class="engrenagem_menu" src="../imagens/gear.png">
+                    <p class="texto_menu"> CONFIGURAÇÕES</p>
                 </div>
                 <div class="flexivel">
-                    <img class="engrenagem-menu" src="../imagens/user.png">
-                    <p class="texto-menu"> CONTA</p>
+                    <img class="engrenagem_menu" src="../imagens/user.png">
+                    <p class="texto_menu"> CONTA</p>
                 </div>
             </div>
         </div>
