adicionado footer em todas as paginas e classes corrigidas

--- a/front-end/estrutura/Jogo.html
+++ b/front-end/estrutura/Jogo.html
@@ -24,5 +24,15 @@
             <img class="tamanho_ideal_expandir"src="../imagens/Expandir.png">
             <img class="tamanho_ideal_volume" src="../imagens/Volume.png">
         </div>
+    </div>
+    <footer class="rodape">
+        <div>
+            <img class="cidade_rodape" src="../imagens/cidade_rodape_Iphone14.png">
+        </div>
+        <div class="display_footer">
+            <img class="logo_prefeitura" src="../imagens/Prefeitura.png">
+            <img class="logo_projeto" src="../imagens/logo_eptran.png">
+        </div>
+    </footer>
 </body>
 </html>
