--- a/front-end/estrutura/menu.html
+++ b/front-end/estrutura/menu.html
@@ -23,7 +23,7 @@
         <header> 
             <img class="fundo_cinza" src= "../imagens/capa.jpg">
             <div class="posicao_cabecalho"> 
-                <p class="tituloCabecalho"> BEM-VINDO AO EPTRAN! </p>
+                <p class="titulo_cabecalho"> BEM-VINDO AO EPTRAN! </p>
             </div>
         </header>
         </div>
@@ -51,9 +51,9 @@
         </div>
         </section>
         <div id="aba_menu">
-            <img class="imagem_tres_barras-menu" src="../imagens/menu.png">
+            <img class="imagem_tres_barras_menu" src="../imagens/menu.png">
             <div class="menu_suspenso">
-                <p class="texto_menu_select"> EPTRAN</p>
+                <p class="texto_menu_select"> EPTRAN </p>
                 <p class="texto_menu"> SÉRIES INICIAIS</p>
                 <p class="texto_menu"> SÉRIES FINAIS</p>
                 <p class="texto_menu"> ENSINO MÉDIO</p>
@@ -71,5 +71,4 @@
             </div>
         </div>
     </body>
-    
 </html>
